--- a/snow-front/package.json
+++ b/snow-front/package.json
@@ -12,10 +12,12 @@
         "@types/react-dom": "^17.0.11",
         "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
+        "i18next": "^21.6.3",
         "react": "^17.0.2",
         "react-bootstrap": "^2.0.3",
         "react-bootstrap-icons": "^1.6.1",
         "react-dom": "^17.0.2",
+        "react-i18next": "^11.15.1",
         "react-scripts": "4.0.3",
         "typescript": "^4.5.3",
         "web-vitals": "^1.1.2"
